[css] fix spacing at the top x2

--- a/frontend/src/app/components/about/about.component.scss
+++ b/frontend/src/app/components/about/about.component.scss
@@ -22,7 +22,7 @@
 
   .intro {
     margin: 25px auto 30px;
-    margin-top: 49px;
+    margin-top: 25px;
     width: 250px;
     display: flex;
     flex-direction: column;
